--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "object-repository",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "release": "generate-release",
     "test": "npm run test-mocha",
     "test-mocha": "npm run test-doubles && npm run test-domain && npm run test-adapters && npm run test-integration",
     "test-domain": "mocha domain --recursive",
@@ -15,7 +16,7 @@
   "license": "GPL v3.0",
   "devDependencies": {
     "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
+    "generate-release": "^1.1.1",
     "mocha": "^6.0.2",
     "sinon": "^7.3.1"
   }
