Added mutation testing and renamed some files.

--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
   "scripts": {
     "release": "release-it",
     "test": "npm run test-mocha",
-    "test-mocha": "npm run test-doubles && npm run test-domain && npm run test-adapters && npm run test-integration",
+    "test-mocha": "npm run test-doubles && npm run test-domain && npm run test-adapters && npm run test-integration && npm run test-mutation",
     "test-domain": "mocha domain --recursive",
     "test-doubles": "mocha test-doubles --recursive",
     "test-adapters": "mocha adapters --recursive",
-    "test-integration": "mocha test-integration --recursive"
+    "test-integration": "mocha test-integration --recursive",
+    "test-mutation": "npx stryker run"
   },
   "author": "Víctor Calatayud Asensio",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "@stryker-mutator/core": "^2.0.2",
+    "@stryker-mutator/javascript-mutator": "^2.0.2",
+    "@stryker-mutator/mocha-framework": "^2.0.2",
+    "@stryker-mutator/mocha-runner": "^2.0.2",
     "chai": "^4.2.0",
     "mocha": "^6.0.2",
     "release-it": "^12.3.0",
