--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@stryker-mutator/mocha-framework": "^2.0.2",
     "@stryker-mutator/mocha-runner": "^2.0.2",
     "chai": "^4.2.0",
+    "expect-to-throw": "^3.0.0",
     "mocha": "^6.0.2",
-    "release-it": "^12.3.0",
+    "release-it": "^12.3.5",
     "sinon": "^7.3.1"
   }
 }
