Added follow tags to patch script

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "test-integration": "mocha test-integration --recursive",
     "test-mutation": "npx stryker run",
     "configure-deployment": "travis setup npm",
-    "patch": "npm version patch && git push --tags",
-    "push-with-tags": "git push --follow-tags"
+    "patch": "npm version patch && git push --follow-tags"
   },
   "author": "Víctor Calatayud Asensio",
   "license": "GPL-3.0-or-later",
