--- a/renovate.json
+++ b/renovate.json
@@ -2,10 +2,10 @@
   "extends": [
     "config:base"
   ],
-  "packageRules": [
-    {
-      "matchUpdateTypes": ["major", "minor", "patch", "pin", "digest"],
-      "automerge": true
-    }
-  ]
+  "patch": {
+    "automerge": true
+  },
+  "pin": {
+    "automerge": true
+  }
 }
