--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "repository": "github:unsegnor/persistent-programming",
   "main": "index.js",
   "scripts": {
-    "release": "release-it",
     "test": "npm run test-mocha",
     "test-mocha": "npm run test-doubles && npm run test-domain && npm run test-adapters && npm run test-integration && npm run test-mutation",
     "test-domain": "mocha domain --recursive",
@@ -13,20 +12,17 @@
     "test-adapters": "mocha adapters --recursive",
     "test-integration": "mocha test-integration --recursive",
     "test-mutation": "npx stryker run",
-    "configure-deployment": "travis setup npm",
     "patch": "npm version patch && git push --follow-tags"
   },
   "author": "Víctor Calatayud Asensio",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "@stryker-mutator/core": "^2.5.0",
-    "@stryker-mutator/javascript-mutator": "^2.5.0",
-    "@stryker-mutator/mocha-framework": "^4.0.0",
-    "@stryker-mutator/mocha-runner": "^2.5.0",
-    "chai": "^4.2.0",
+    "@stryker-mutator/core": "5.3.0",
+    "@stryker-mutator/mocha-runner": "5.3.0",
+    "chai": "4.3.4",
+    "cucumber": "6.0.5",
+    "mocha": "9.0.3",
     "expect-to-throw": "^3.0.0",
-    "mocha": "^8.1.1",
-    "release-it": "^13.6.6",
     "sinon": "^7.5.0"
   }
 }
